--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <head>
-	<title>Gustavo Gabriel: Mapa de Carreira</title>
+	<title>Felipe Dias: Mapa de Carreira</title>
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,7 +38,7 @@
 	<script defer src="assets/fontawesome/js/all.min.js"></script>
 
 	<!-- Theme CSS -->
-	<link id="theme-style" rel="stylesheet" href="assets/css/bootstrap-6.css">
+	<link id="theme-style" rel="stylesheet" href="assets/css/bootstrap-4.css">
 	
 	<style>
        
@@ -52,33 +52,33 @@
 			<header class="resume-header pt-4 pt-md-0">
 				<div class="row">
 					<div class="col-block col-md-auto resume-picture-holder text-center text-md-start">
-						<img class="picture" src="assets/images/profile_ggfo.jpg" alt="">
+						<img class="picture" src="assets/images/profile.jpg" alt="">
 					</div>
 					<div class="col">
 						<div class="row p-4 justify-content-center justify-content-md-between">
 							<div class="primary-info col-auto">
-								<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Gustavo Gabriel</h1>
+								<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Felipe Dias</h1>
 								<div class="title mb-3 ">Estudante de Desenvolvimento Web</div>
 								<ul class="list-unstyled">
 									<li class="mb-2">
-										<a class="text-link" href="mailto:gustavo.gfoliveira@hotmail.com">
+										<a class="text-link" href="mailto:felipediaslim13@outlook.com">
 											<i class="far fa-envelope fa-fw me-2" data-fa-transform="grow-3"></i>
-											gustavo.gfoliveira@hotmail.com
+											felipediaslim13@outlook.com
 										</a>
 									</li>
 								</ul>
 							</div>
 							<div class="secondary-info col-auto mt-2">
 								<ul class="resume-social list-unstyled">
-									<li class="mb-3"><a class="text-link" href="https://www.linkedin.com/in/gustavogfoliveira/">
+									<li class="mb-3"><a class="text-link" href="https://www.linkedin.com/in/felipediaslima/">
 											<span class="fa-container text-center me-2">
 												<i
-													class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/gustavogfoliveira</a>
+													class="fab fa-linkedin-in fa-fw"></i></span>Linkedin</a>
 									</li>
 									<li class="mb-3">
-										<a class="text-link" href="https://github.com/gustavfaustino">
+										<a class="text-link" href="https://github.com/AkashiAkz">
 											<span class="fa-container text-center me-2">
-												<i class="fab fa-github-alt fa-fw"></i></span>github.com/gustavfaustino
+												<i class="fab fa-github-alt fa-fw"></i></span>Github
 										</a>
 									</li>
 								</ul>
@@ -91,10 +91,10 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Muito Prazer em Conhecer!</h2>
 					<div class="resume-section-content">
-						<p class="mb-0 ">Sou Gustavo, desenvolvedor web focado em backend e sempre em busca de aprender e superar desafios. Gosto de criar soluções que ajudem as pessoas e facilitem o trabalho em equipe, e tenho experiência em projetos de sistemas completos, integrando frontend, backend e banco de dados. Além de gostar de programar, tenho interesse em posições de liderança, onde posso unir minhas habilidades técnicas com a vontade de orientar e apoiar minha equipe. Recentemente, estou envolvido em projetos que buscam impacto social, como o LevaNois, plataforma que conecta jovens periféricos a oportunidades de intercâmbio internacional.</p>
+						<p class="mb-0 ">Sou Felipe Dias, desenvolvedor web focado em backend e sempre em busca de aprender e superar desafios. Gosto de criar soluções que ajudem as pessoas a facilitarem o trabalho em equipe no seu dia a dia. Além de gostar de programar, tenho interesse em posições de liderança, onde posso unir minhas habilidades técnicas com a vontade de orientar e apoiar minha equipe. Recentemente, estou envolvido em projetos que buscam impacto social, como o LevaNois, plataforma que conecta jovens periféricos a oportunidades de intercâmbio internacional.</p>
 
 						<!-- Altere o link para um PDF do seu Curriculo -->
-						<a class="btn" target=”_blank” href="Gustavo Gabriel Faustino de Oliveira_revisado.pdf">Baixar o meu CV</a>
+						<a class="btn" target=”_blank” href="Felipe Dias Lima_revisado (1).docx">Baixar o meu CV</a>
 					</div>
 				</section>
 				<div class="row">
@@ -155,11 +155,10 @@
 <!-- Tech Mentor -->
 <article class="resume-timeline-item position-relative pb-5">
     <div class="resume-timeline-item-header mb-2">
-        <h3 class="resume-position-title font-weight-bold mb-1">Tech Mentor</h3>
+        <h3 class="resume-position-title font-weight-bold mb-1">Analise de Dados</h3>
     </div>
     <div class="resume-timeline-item-desc">
-        <p>Planejo ajudar ativamente no desenvolvimento de outros profissionais, compartilhando conhecimento e promovendo um ambiente de aprendizado, ao mesmo tempo em que aprimoro minha própria liderança técnica e tomada de decisões.</p>
-        <h4 class="resume-timeline-item-desc-heading font-weight-bold">Soft Skills:</h4>
+		<p>Com o objetivo de me tornar um especialista em análise de dados, busco aprimorar habilidades em análise de dados, visualização de dados e machine learning.</p>
         <ul>
             <li>Visão Estratégica e Adaptável</li>
             <li>Mentoria e Suporte Técnico</li>
@@ -167,8 +166,8 @@
         </ul>
         <h4 class="resume-timeline-item-desc-heading font-weight-bold">Roadmap de Aprendizado:</h4>
         <ul class="list-inline">
-            <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Arquitetura Avançada</span></li>
-            <li class="list-inline-item"><span class="badge bg-secondary badge-pill">CI/CD</span></li>
+            <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Fundamentos suporte tecnico</span></li>
+            <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Ferramentas de suporte</span></li>
             <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Gestão de Pessoas</span></li>
         </ul>
     </div>
@@ -241,7 +240,7 @@
 											<div class="resume-skill-name">Python</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 70%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 60%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -250,45 +249,20 @@
 											<div class="resume-skill-name">Java</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 85%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 65%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
-											</div>
-										</li>
-										<li class="mb-2">
-											<div class="resume-skill-name">Spring Boot</div>
-											<div class="progress resume-progress">
-												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 70%" aria-valuenow="25" aria-valuemin="0"
-													aria-valuemax="100"></div>
-											</div>
-										</li>
-										<li class="mb-2">
-											<div class="resume-skill-name">Kotlin</div>
-											<div class="progress resume-progress">
-												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 47%" aria-valuenow="25" aria-valuemin="0"
-													aria-valuemax="100"></div>
-											</div>
-										</li>
 									</ul>
 								</div>
 
 								<div class="resume-skill-item">
 									<h4 class="resume-skills-cat font-weight-bold">Outras</h4>
 									<ul class="list-inline">
-										<li class="list-inline-item"><span class="badge badge-light">DevOps</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Code Review</span>
-										</li>
 										<li class="list-inline-item"><span class="badge badge-light">Git</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">AWS</span>
 										</li>
 										<li class="list-inline-item"><span class="badge badge-light">Team Work</span>
 										</li>
 										<li class="list-inline-item"><span class="badge badge-light">MySQL</span>
-										</li>
-										<li class="list-inline-item"><span class="badge badge-light">MongoDB</span>
-										</li>
-										<li class="list-inline-item"><span class="badge badge-light">Oracle</span>
 										</li>
 									</ul>
 								</div>
